--- a/application/home/view/project/tab.html
+++ b/application/home/view/project/tab.html
@@ -1,7 +1,7 @@
 
 <ul class="nav nav-tabs">
-    <li {{if $tab == 'home'}}class="active"{{/if}}><a href="{{url()}}?tab=home">项目主页</a></li>
-    <li {{if $tab == 'member'}}class="active"{{/if}}><a href="{{url()}}?tab=member">项目成员</a></li>
-    <li {{if $tab == 'map'}}class="active"{{/if}}><a href="{{url()}}?tab=map">数据字典</a></li>
-    <li {{if $tab == 'history'}}class="active"{{/if}}><a href="{{url()}}?tab=history">项目动态</a></li>
+    <li class="{{if $tab == 'home'}}active{{/if}}"><a href="{{url()}}?tab=home">项目主页</a></li>
+    <li class="{{if $tab == 'member'}}active{{/if}}"><a href="{{url()}}?tab=member">项目成员</a></li>
+    <li class="{{if $tab == 'map'}}active{{/if}}"><a href="{{url()}}?tab=map">数据字典</a></li>
+    <li class="hidden-xs {{if $tab == 'history'}}active{{/if}}"><a href="{{url()}}?tab=history">项目动态</a></li>
 </ul>
