--- a/application/install/view/step2.html
+++ b/application/install/view/step2.html
@@ -49,7 +49,7 @@
                                         <div class="form-group">
                                             <label class="col-sm-2 control-label">数据库名</label>
                                             <div class="col-sm-10">
-                                                <input type="text" name="step2[name]" class="form-control" datatype="*" value="" placeholder="不存在会自动创建">
+                                                <input type="text" name="step2[name]" class="form-control" datatype="*" value="phprap" placeholder="不存在会自动创建">
                                             </div>
                                         </div>
 
