--- a/views/home/field/create.html
+++ b/views/home/field/create.html
@@ -1,4 +1,4 @@
-{{include_file name='home/public/header' title='编辑表单'}}
+{{include_file name='home/public/header' title='添加字段'}}
 <style>
     .table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td {
         padding: 8px 8px 8px 0;
@@ -117,7 +117,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="page-header">
-                        <h1>编辑字段</h1>
+                        <h1>添加字段</h1>
                         <div class="opt-btn">
                             <a class="btn btn-sm btn-warning js_cancel" href="javascript:;" onclick="cancelSave()"><i class="fa fa-fw fa-reply"></i>取消</a>
                             <a class="btn btn-sm btn-success ml-1" id="js_submit" href="javascript:void(0);"><i class="fa fa-fw fa-save"></i>保存</a>
