--- a/views/home/field/create.html
+++ b/views/home/field/create.html
@@ -1,4 +1,4 @@
-{{include_file name='home/public/header' title='添加字段'}}
+{{include_file name='home/public/header' title='编辑字段'}}
 <style>
     .table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td {
         padding: 8px 8px 8px 0;
@@ -161,7 +161,7 @@
                                                     </thead>
                                                     <tbody>
 
-                                                    {{foreach $field->headerAttributes as $header}}
+                                                    {{foreach $template->headerAttributes as $header}}
                                                     <tr>
                                                         <td class="hidden"><input name="header[id][]" class="form-control js_id" value="{{$header->id}}"></td>
                                                         <td class="hidden"><input name="header[parent_id][]" class="form-control js_parent_id" value="{{$header->parent_id}}"></td>
@@ -235,7 +235,7 @@
                                                     </thead>
                                                     <tbody>
 
-                                                    {{foreach $field->requestAttributes as $request}}
+                                                    {{foreach $template->requestAttributes as $request}}
                                                     <tr>
 
                                                         <td class="hidden"><input name="request[id][]" class="form-control js_id" value="{{$request->id}}"></td>
@@ -306,7 +306,7 @@
                                                     </thead>
                                                     <tbody>
 
-                                                    {{foreach $field->responseAttributes as $k=>$response}}
+                                                    {{foreach $template->responseAttributes as $k=>$response}}
                                                     <tr>
                                                         <td class="hidden"><input name="response[id][]" class="form-control js_id" value="{{$response->id}}"></td>
                                                         <td class="hidden"><input name="response[parent_id][]" class="form-control js_parent_id" value="{{$response->parent_id}}"></td>
@@ -379,6 +379,11 @@
     }
 
     $(function(){
+        {{if Yii::$app->request->queryParams['from'] != 'template'}}
+        confirm('是否需要导入项目模板字段？', function(){
+            window.location.href = "{{url('', ['from' => 'template'])}}";
+        });
+        {{/if}}
 
         // 初始化change
         $('.js_type').trigger("change");
