--- a/views/home/template/home.html
+++ b/views/home/template/home.html
@@ -108,7 +108,7 @@
                             <div class="col-lg-12">
                                 <div class="panel panel-default">
                                     <div class="panel-heading">
-                                        请求参数
+                                        请求参数({{$template->postMethodLabel}})
                                     </div>
                                     <!-- /.panel-heading -->
                                     <div class="panel-body">
