--- a/views/home/field/home.html
+++ b/views/home/field/home.html
@@ -111,7 +111,7 @@
                             <div class="col-lg-12">
                                 <div class="panel panel-default">
                                     <div class="panel-heading">
-                                        请求参数
+                                        请求参数({{$field->postMethodLabel}})
                                     </div>
                                     <!-- /.panel-heading -->
                                     <div class="panel-body">
